--- a/app/templates/pitch.html
+++ b/app/templates/pitch.html
@@ -1,11 +1,12 @@
 <div class="card text-center">
     <div class="card-header">
-      Featured
+      <h2>Title to the pitch</h2>
     </div>
     <div class="card-body">
       <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">Pitch content</p>
+      <a href="">likes and dislike comes here...</a>
+      <a href="#" class="btn btn-primary">Submit</a>
     </div>
     <div class="card-footer text-muted">
       2 days ago
