--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,10 +9,11 @@
 
 
 {%block styles %}
+  {{super()}}
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="{{url_for('static', filename= 'css/boostrap.min.css')}}"/>
-{% endblock %}
+  <!--Importing the simple mde css and js files  -->
+  {{ simplemde.css}}
+  {{ simplemde.js }}
 
-{% block scripts %}
-<script src=""></script>
-{% endblock%}
+{% endblock %}
