--- a/app/templates/new_pitch.html
+++ b/app/templates/new_pitch.html
@@ -1,17 +1,21 @@
+{% extends 'base.html'%}
+{% import 'bootstrap/wtf.html' as wtf%}
+{% block content %}
 <div class="container">
-    <div class="col-sm-6">
-        <div class="card text-center">
-            <div class="card-header">
-              <h3 class="text-center">Create New Pitch</h3>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-            <div class="card-footer text-muted">
-              2 days ago
-            </div>
+  <div class="col-sm-6">
+      <div class="card text-center">
+          <div class="card-header">
+            <h3 class="text-center">Create New Pitch</h3>
           </div>
-    </div>
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+          <div class="card-footer text-muted">
+            2 days ago
+          </div>
+        </div>
+  </div>
 </div>
+{% endblock%}
