--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -4,47 +4,65 @@
 
 {% block content %}
 
-<div class="container">
+<body>
+  <div class="container text-center">
 
-<div class="row">
+    <div class="row">
+    
+    
+      <div class="col-md-4">
+        <h3>******** {{user.username| capitalize}} ********</h3>
+        <hr>
+    
+        {% if user.bio %}
+          <p> {{user.bio}}</p>
+    
+        {%else%}
+          <h4> {{user.username| capitalize}} has no Bio.. Can Add One </h4>
+        {% endif %}
+    
+        {% if user == current_user %}
+        
+          <a href="{{url_for('main.update_profile',uname = user.username)}}" class="btn btn-primary">Edit profile</a>
+        {% endif %}
+    
+      </div>
+      <div class="col-md-4">
+        {% if user.profile_pic_path %}
+    
+        <img src="{{url_for('static',filename = user.profile_pic_path)}}" alt="" class="img-thumbnail">
+    
+        {%else%}
+    
+        <p>No profile picture</p>
+    
+        {% endif %}
+    
+        {% if user == current_user %}
+        <form  action="{{url_for('main.update_pic',uname = user.username)}}" method="post" enctype = "multipart/form-data">
+    
+          <input type="file"  name="photo" class="form-control" required>
+          <input class="btn btn-success btn-sm" type="submit">
+        </form>
+          {% endif %}
+      </div>
+    
+    
+    </div>
+    </div>
+    <style>
+      body{
+        background:url(https://mcdn.wallpapersafari.com/medium/66/34/8bElNm.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
 
-
-  <div class="col-md-4">
-    <h3> {{user.username| capitalize}} </h3>
-
-    {% if user.bio %}
-      <p> {{user.bio}}</p>
-
-    {%else%}
-      <p> {{user.username| capitalize}} has no bio </p>
-    {% endif %}
-
-    {% if user == current_user %}
-      <a href="{{url_for('main.update_profile',uname = user.username)}}">Edit profile</a>
-    {% endif %}
-
-  </div>
-  <div class="col-md-4">
-    {% if user.profile_pic_path %}
-
-    <img src="{{url_for('static',filename = user.profile_pic_path)}}" alt="" class="img-thumbnail">
-
-    {%else%}
-
-    <p>No profile picture</p>
-
-    {% endif %}
-
-    {% if user == current_user %}
-    <form  action="{{url_for('main.update_pic',uname = user.username)}}" method="post" enctype = "multipart/form-data">
-
-      <input type="file"  name="photo" class="form-control" required>
-      <input class="btn btn-success btn-sm" type="submit">
-    </form>
-      {% endif %}
-  </div>
-
-
-</div>
-</div>
+      }
+      .container{
+        background-color: lavender;
+        padding: 30px;
+        border-radius: 10px;
+    
+      }
+    </style>
+</body>
 {% endblock %}
