--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -22,6 +22,21 @@
       </div>
   </div>
   </body>
+  <style>
+    body{
+      background: url(https://mcdn.wallpapersafari.com/medium/66/34/8bElNm.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    form{
+      background-color: lavender;
+      padding: 30px;
+     border-radius: 10px;
+    }
+    p{
+      color: #fff;
+    }
+  </style>
 
 
 {% endblock%}
